<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Just Java</string>
    <string name="name_suggest">Your name here</string>
    <string name="phone_suggest">Your phone number here</string>
    <string name="toppings_disp">toppings</string>
    <string name="topping1">Whipped Cream</string>
    <string name="topping2">Chocolate</string>
    <string name="quantity_disp">Quantity</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="order">order</string>
    <string name="error_100">Sorry! We can\'t handle such huge orders.</string>
    <string name="error_0">You have to order atleast one cup of coffee!</string>
    <string name="whipped_cream_log">Has whipped cream</string>
    <string name="chocolate_log">Has chocolate</string>
    <string name="name_empty_error">Name field can\'t be empty</string>
    <string name="phone_empty_error">Phone number field can\'t be empty</string>
    <string name="email_subject">Coffee order for</string>
    <string name="add_yes">Yes</string>
    <string name="add_no">No</string>
    <string name="price_disp">Price</string>
    <string name="name_disp">Name</string>
    <string name="phone_disp">Phone number</string>
    <string name="whipped_cream_disp">Add whipped cream</string>
    <string name="chocolate_disp">Add chocolate</string>
    <string name="thank_you_disp">Thank you!</string>
    <string name="closed">Sorry, we are closed.</string>
    <string name="intro">Hello \n How are you? \n Where are you?</string>
    <string name="glaze_disp">Add sugar glaze</string>
    <string name="frosted_disp">Add chocolate frost</string>
    <string name="zero">0</string>
    <string name="rs">\u20B9</string>
    <string name="closed_disp">Breathe in&#8230; Breathe out Sorry, we are closed!</string>
    <string name="welcome_disp">Welcome to DONUT CAFE !</string>
    <string name="open_disp">Now OPEN :)</string>
    <string name="continue_disp">continue</string>
    <string name="coffee">coffee</string>
    <string name="donuts">donuts</string>
    <string name="price_coffee">(₹ 15 per cup)</string>
    <string name="price_donut">(₹ 50 per donut)</string>
    <string name="price_whipped_cream">Add whipped cream (₹ 5)</string>
    <string name="price_chocolate">Add chocolate (₹ 8)</string>
    <string name="price_glaze">Add sugar glaze (₹ 10)</string>
    <string name="price_frost">Add chocolate frost (₹ 15)</string>
    <string name="error_negative_coffee">Oops! No negative cups of coffee!</string>
    <string name="erroe_negative_donut">You must be kidding!</string>
    <string name="error_no_order">Oh No! You have to order something</string>
</resources>