<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/sixteen"
        tools:context=".OrderActivity">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="@dimen/eight"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/name_suggest"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/eight"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/phone_suggest"
            android:inputType="phone" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:backgroundTint="@color/background_card"
            android:elevation="@dimen/sixteen"
            app:cardCornerRadius="@dimen/eight">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight">

                <ImageView
                    android:layout_width="@dimen/size_hundred"
                    android:layout_height="@dimen/size_hundred"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/coffee"
                    android:src="@drawable/ic_coffee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coffee"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/coffee_price_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/eight" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/whipped_cream_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false" />

                        <TextView
                            android:id="@+id/whipped_cream_price_disp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/chocolate_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false" />

                        <TextView
                            android:id="@+id/chocolate_price_disp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <Button
                            android:layout_width="@dimen/fortyeight"
                            android:layout_height="@dimen/fortyeight"
                            android:backgroundTint="@color/colorAccent"
                            android:onClick="decrementCoffee"
                            android:text="@string/minus"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/coffee_quantity_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/size_four"
                            android:text="@string/zero"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

                        <Button
                            android:layout_width="@dimen/fortyeight"
                            android:layout_height="@dimen/fortyeight"
                            android:backgroundTint="@color/colorAccent"
                            android:onClick="incrementCoffee"
                            android:text="@string/plus"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                            android:textColor="@color/text_white" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyfour"
            android:backgroundTint="@color/background_card"
            android:elevation="@dimen/sixteen"
            app:cardCornerRadius="@dimen/eight">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight">

                <ImageView
                    android:layout_width="@dimen/size_hundred"
                    android:layout_height="@dimen/size_hundred"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/donuts"
                    android:src="@drawable/ic_donuts" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donuts"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/donut_price_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/eight" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/glazed_donut_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false" />

                        <TextView
                            android:id="@+id/glaze_price_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/frosted_donut_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false" />

                        <TextView
                            android:id="@+id/frost_price_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <Button
                            android:layout_width="@dimen/fortyeight"
                            android:layout_height="@dimen/fortyeight"
                            android:backgroundTint="@color/colorAccent"
                            android:onClick="decrementDonut"
                            android:text="@string/minus"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/donut_quantity_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/size_four"
                            android:text="@string/zero"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

                        <Button
                            android:layout_width="@dimen/fortyeight"
                            android:layout_height="@dimen/fortyeight"
                            android:backgroundTint="@color/colorAccent"
                            android:onClick="incrementDonut"
                            android:text="@string/plus"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                            android:textColor="@color/text_white" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/twentyfour"
            android:backgroundTint="@color/colorAccent"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="@color/text_white" />
    </LinearLayout>
</ScrollView>